# decifer

./: CMakeLists.txt  Doxyfile.in  README.md
analysis/: clusters-by-cnas.ipynb
data/: statetrees_maxXY3_maxCN2.txt  statetrees_maxXY4_maxCN2.txt  tracerx_cna_clusters.ipynb
data/gundem/: A10.input.tsv  A12.input.tsv  A17.input.tsv  A21.input.tsv  A22.input.tsv  A24.input.tsv  A29.input.tsv  A31.input.tsv  A32.input.tsv  A34.input.tsv
data/sims/: generate.sh  m2_n100_k3_C200_s1.input.tsv  m2_n100_k3_C200_s10.input.tsv  m2_n100_k3_C200_s11.input.tsv  m2_n100_k3_C200_s12.input.tsv  m2_n100_k3_C200_s13.input.tsv  m2_n100_k3_C200_s14.input.tsv  m2_n100_k3_C200_s15.input.tsv  m2_n100_k3_C200_s16.input.tsv  m2_n100_k3_C200_s17.input.tsv  m2_n100_k3_C200_s18.input.tsv  m2_n100_k3_C200_s19.input.tsv  m2_n100_k3_C200_s2.input.tsv  m2_n100_k3_C200_s20.input.tsv  m2_n100_k3_C200_s3.input.tsv  m2_n100_k3_C200_s4.input.tsv  m2_n100_k3_C200_s5.input.tsv  m2_n100_k3_C200_s6.input.tsv  m2_n100_k3_C200_s7.input.tsv  m2_n100_k3_C200_s8.input.tsv  m2_n100_k3_C200_s9.input.tsv  m2_n100_k4_C200_s1.input.tsv  m2_n100_k4_C200_s10.input.tsv  m2_n100_k4_C200_s11.input.tsv  m2_n100_k4_C200_s12.input.tsv  m2_n100_k4_C200_s13.input.tsv  m2_n100_k4_C200_s14.input.tsv  m2_n100_k4_C200_s15.input.tsv  m2_n100_k4_C200_s16.input.tsv  m2_n100_k4_C200_s17.input.tsv  m2_n100_k4_C200_s18.input.tsv  m2_n100_k4_C200_s19.input.tsv  m2_n100_k4_C200_s2.input.tsv  m2_n100_k4_C200_s20.input.tsv  m2_n100_k4_C200_s3.input.tsv  m2_n100_k4_C200_s4.input.tsv  m2_n100_k4_C200_s5.input.tsv  m2_n100_k4_C200_s6.input.tsv  m2_n100_k4_C200_s7.input.tsv  m2_n100_k4_C200_s8.input.tsv  (+501 more)
data/sims_large/: generate.sh  m2_n100_k10_C200_s1.input.tsv  m2_n100_k10_C200_s10.input.tsv  m2_n100_k10_C200_s11.input.tsv  m2_n100_k10_C200_s12.input.tsv  m2_n100_k10_C200_s13.input.tsv  m2_n100_k10_C200_s14.input.tsv  m2_n100_k10_C200_s15.input.tsv  m2_n100_k10_C200_s16.input.tsv  m2_n100_k10_C200_s17.input.tsv  m2_n100_k10_C200_s18.input.tsv  m2_n100_k10_C200_s19.input.tsv  m2_n100_k10_C200_s2.input.tsv  m2_n100_k10_C200_s20.input.tsv  m2_n100_k10_C200_s3.input.tsv  m2_n100_k10_C200_s4.input.tsv  m2_n100_k10_C200_s5.input.tsv  m2_n100_k10_C200_s6.input.tsv  m2_n100_k10_C200_s7.input.tsv  m2_n100_k10_C200_s8.input.tsv  m2_n100_k10_C200_s9.input.tsv  m2_n100_k15_C200_s1.input.tsv  m2_n100_k15_C200_s10.input.tsv  m2_n100_k15_C200_s11.input.tsv  m2_n100_k15_C200_s12.input.tsv  m2_n100_k15_C200_s13.input.tsv  m2_n100_k15_C200_s14.input.tsv  m2_n100_k15_C200_s15.input.tsv  m2_n100_k15_C200_s16.input.tsv  m2_n100_k15_C200_s17.input.tsv  m2_n100_k15_C200_s18.input.tsv  m2_n100_k15_C200_s19.input.tsv  m2_n100_k15_C200_s2.input.tsv  m2_n100_k15_C200_s20.input.tsv  m2_n100_k15_C200_s3.input.tsv  m2_n100_k15_C200_s4.input.tsv  m2_n100_k15_C200_s5.input.tsv  m2_n100_k15_C200_s6.input.tsv  m2_n100_k15_C200_s7.input.tsv  m2_n100_k15_C200_s8.input.tsv  (+561 more)
data/tracerx_lung/: CRUK0001.capped4.input.tsv  CRUK0001.input.tsv  CRUK0002.capped4.input.tsv  CRUK0002.input.tsv  CRUK0003.capped4.input.tsv  CRUK0003.input.tsv  CRUK0004.capped4.input.tsv  CRUK0004.input.tsv  CRUK0005.capped4.input.tsv  CRUK0005.input.tsv  CRUK0006.capped4.input.tsv  CRUK0006.input.tsv  CRUK0007.capped4.input.tsv  CRUK0007.input.tsv  CRUK0008.capped4.input.tsv  CRUK0008.input.tsv  CRUK0009.capped4.input.tsv  CRUK0009.input.tsv  CRUK0010.capped4.input.tsv  CRUK0010.input.tsv  CRUK0011.capped4.input.tsv  CRUK0011.input.tsv  CRUK0012.capped4.input.tsv  CRUK0012.input.tsv  CRUK0013.capped4.input.tsv  CRUK0013.input.tsv  CRUK0014.capped4.input.tsv  CRUK0014.input.tsv  CRUK0015.capped4.input.tsv  CRUK0015.input.tsv  CRUK0016.capped4.input.tsv  CRUK0016.input.tsv  CRUK0017.capped4.input.tsv  CRUK0017.input.tsv  CRUK0018.capped4.input.tsv  CRUK0018.input.tsv  CRUK0019.capped4.input.tsv  CRUK0019.input.tsv  CRUK0020.capped4.input.tsv  CRUK0020.input.tsv  (+157 more)
data/tracerx_lung/data/: cnas.csv  phylogenies.csv
results/: decifer.sims.tsv  decifer.simslarge.tsv
results/tracerx_lung/CRUK0001/: CRUK0001.BIC.tsv  CRUK0001.err  CRUK0001_k1.SNV.tsv  CRUK0001_k1.T.res  CRUK0001_k10.SNV.tsv  CRUK0001_k10.T.res  CRUK0001_k11.SNV.tsv  CRUK0001_k11.T.res  CRUK0001_k12.SNV.tsv  CRUK0001_k12.T.res  CRUK0001_k13.SNV.tsv  CRUK0001_k13.T.res  CRUK0001_k14.SNV.tsv  CRUK0001_k14.T.res  CRUK0001_k15.SNV.tsv  CRUK0001_k15.T.res  CRUK0001_k16.SNV.tsv  CRUK0001_k16.T.res  CRUK0001_k17.SNV.tsv  CRUK0001_k17.T.res  CRUK0001_k18.SNV.tsv  CRUK0001_k18.T.res  CRUK0001_k19.SNV.tsv  CRUK0001_k19.T.res  CRUK0001_k2.SNV.tsv  CRUK0001_k2.T.res  CRUK0001_k20.SNV.tsv  CRUK0001_k20.T.res  CRUK0001_k3.SNV.tsv  CRUK0001_k3.T.res  CRUK0001_k4.SNV.tsv  CRUK0001_k4.T.res  CRUK0001_k5.SNV.tsv  CRUK0001_k5.T.res  CRUK0001_k6.SNV.tsv  CRUK0001_k6.T.res  CRUK0001_k7.SNV.tsv  CRUK0001_k7.T.res  CRUK0001_k8.SNV.tsv  CRUK0001_k8.T.res  (+2 more)
results/tracerx_lung/CRUK0002/: CRUK0002.BIC.tsv  CRUK0002.err  CRUK0002_k1.SNV.tsv  CRUK0002_k1.T.res  CRUK0002_k10.SNV.tsv  CRUK0002_k10.T.res  CRUK0002_k11.SNV.tsv  CRUK0002_k11.T.res  CRUK0002_k12.SNV.tsv  CRUK0002_k12.T.res  CRUK0002_k13.SNV.tsv  CRUK0002_k13.T.res  CRUK0002_k14.SNV.tsv  CRUK0002_k14.T.res  CRUK0002_k15.SNV.tsv  (+27 more)
scripts/: processBIC.py  processDECIFERLargeSims.sh  processDECIFERLargeSims.sh~  processDECIFERSims.sh  processSoftBICClustering.sh~
src/: analyzemain.cpp  ccfmain.cpp  clusterilp.cpp  clusterilp.h  clusterilpcplex.cpp  clusterilpcplex.h  clusterilpcplexcallback.h  clusterilpgurobi.cpp  clusterilpgurobi.h  coordinateascent.cpp  coordinateascent.h  decifermain.cpp  em.cpp  em.h  emcplex.cpp  emcplex.h  emcplexpre.cpp  emcplexpre.h  emgurobi.cpp  emgurobi.h  empre.cpp  empre.h  generatemain.cpp  generatestatetreesmain.cpp  generativemodel.cpp  generativemodel.h  hardclusterilp.cpp  hardclusterilp.h  hardclusterilpcplex.cpp  hardclusterilpcplex.h  hardclusterilpgurobi.cpp  hardclusterilpgurobi.h  hardpreclusterilpcplex.cpp  hardpreclusterilpcplex.h  incrementalpreclustersolver.cpp  incrementalpreclustersolver.h  incrementalsolver.cpp  incrementalsolver.h  minclusterilp.cpp  minclusterilp.h  (+39 more)
(+3951 files in other folders)
